<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/button8"
        android:onClick="addnumber"
        android:text="@string/number9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button8"
        android:onClick="addnumber"
        android:text="@string/number4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="addnumber"
        android:text="@string/number5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="addnumber"
        android:layout_alignLeft="@+id/button9"
        android:layout_centerVertical="true"
        android:text="@string/number6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button4"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/button8"
        android:onClick="addnumber"
        android:text="@string/number1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="addnumber"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toLeftOf="@+id/button9"
        android:text="@string/number2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/button9"
        android:onClick="addnumber"
        android:text="@string/number3" />

    <Button
        android:id="@+id/button0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="19dp"
        android:onClick="addnumber"
        android:text="@string/number0" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button0"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignRight="@+id/button3"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button5"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button7"
        android:onClick="addnumber"
        android:text="@string/number8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:onClick="addnumber"
        android:text="@string/number7" />



    <RadioGroup
        android:id="@+id/operationGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9" >

        <RadioButton
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more" />

        <RadioButton
            android:id="@+id/less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/operationGroup"
        android:layout_alignRight="@+id/button8"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>